2007-09-23  Peter Bloomfield

	* src/toolbar-factory.c: (tm_save_model): remove old toolbar
	config before saving new one.

2007-09-23  Peter Bloomfield

	* libbalsa/identity.c: use GTK_RESPONSE_HELP, so that the "Help"
	button is created correctly.

2007-09-23  Peter Bloomfield

	* src/main-window.c: add tooltip for "Quit".
	* src/toolbar-factory.c: (do_popup_menu): allow "Quit" to be a
	toolbar button; use gtk_menu_attach_to_widget only if it allows
	a NULL detacher; add "Customize Toolbars..." item.

2007-09-22  Peter Bloomfield

	* src/main-window.c: make a stack of "opening mailbox..."
	messages; new toolbar api.
	* src/message-window.c: (mw_get_toolbar_model): new toolbar api.
	* src/save-restore.c: (save_toolbars), (load_toolbars): move
	toolbar save and load to toolbar-factory.c.
	* src/sendmsg-window.c: (sw_get_toolbar_model): new toolbar api.
	* src/toolbar-factory.c: create a popup menu for toolbar.
	* src/toolbar-factory.h: new toolbar api.
	* src/toolbar-prefs.c: (style_button_cb), (create_toolbar_page):
	add a button to popup toolbar style menu.

2007-09-21  Peter Bloomfield

	* src/ab-main.c: (bab_window_new): migrate from GnomeApp.
	* src/balsa-app.h: ditto.
	* src/balsa-index.c: (balsa_index_load_mailbox_node): handle
	status messages in main-window.
	* src/balsa-mblist.c: (balsa_mblist_set_status_bar): migrate
	from GnomeApp.
	* src/balsa-mime-widget-text.c: (statusbar_pop), (handle_url),
	(balsa_gtk_html_on_url): ditto.
	* src/information-dialog.c: (balsa_information_list),
	(status_bar_refresh), (balsa_information_bar): ditto.
	* src/mailbox-node.c: (imap_dir_cb): ditto.
	* src/main-window.c: ditto.
	* src/main-window.h: ditto.
	* src/main.c: (threads_init): pass balsa_app.main_window as
	user data.
	* src/message-window.c: (message_window_new): migrate from
	GnomeApp.
	* src/pref-manager.c: (open_preferences_manager), (set_prefs):
	ditto.
	* src/sendmsg-window.c: (sendmsg_window_new): ditto.
	* src/toolbar-prefs.c: (customize_dialog_cb): ditto.